# jaydebeapiarrow

./: .bumpversion.cfg  .gitignore  CLAUDE.md  README.md  dev-requirements.txt  devops.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
arrow-jdbc-extension/: pom.xml
arrow-jdbc-extension/src/main/java/org/jaydebeapiarrow/extension/: ExplicitTypeMapper.java  JDBCUtils.java  OverriddenConsumer.java  TimeUtils.java
arrow-jdbc-extension/src/main/java/org/jaydebeapiarrow/extension/binder/: Time32BinderWithCalendar.java  Time64BinderWithCalendar.java
arrow-jdbc-extension/src/main/java/org/jaydebeapiarrow/extension/consumer/: DateConsumer.java  DecimalConsumer.java  OverriddenConsumer.java  TimeConsumer.java  TimestampConsumer.java  TimestampTZConsumer.java
benchmark/: README.md  analyze_results.py  compare_performance.py  download_driver.sh  memory_benchmark.py  prepare_data.py  run_benchmark.sh
benchmark/setup/: README.md  docker-compose.yml  start.sh  status.sh
ci/: download_drill_jdbc.sh
docs/: differences-from-parent.md
jaydebeapiarrow/: __init__.py
jaydebeapiarrow/lib/: arrow_utils.py
legacy_docs/: README.rst
mockdriver/src/main/java/org/jaydebeapi/mockdriver/: MockConnection.java  MockDriver.java
test/: .env  build.sh  docker-compose.yml  doctests.py  download_jdbc_drivers.sh  start.sh  status.sh  stop.sh  test_integration.py  test_mock.py  testsuite.py
test/data/: create_db2.sql  create_drill.sql  create_hsqldb.sql  create_mssql.sql  create_mysql.sql  create_oracle.sql  create_postgres.sql  create_trino.sql  insert_oracle.sql  insert_trino.sql
